--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
 
         /* Logo */
         .logo {
-            width: 50px; /* Tamaño del logo */
-            height: 50px;
-            margin-right: 10px;
+            width: 60px; /* Tamaño del logo */
+            height: 60px;
+            margin-right: 15px;
         }
 
         /* Título */
@@ -166,8 +166,8 @@
     <!-- Encabezado -->
     <header>
         <!-- Logo con enlace -->
-        <a href="https://ejemplo.com" target="_blank">
-            <img src="https://i.postimg.cc/639NdrvT/Pre-XXXotica-1.png" alt="Logo" class="logo">
+        <a href="https://prexxxotica.netlify.app" target="_blank">
+            <img src="https://i.postimg.cc/26hvHBDw/Pre-XXXotica-1-1.png" alt="Logo" class="logo">
         </a>
         <!-- Título -->
         <div class="title"> PreXXXotica </div>
