--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
                             </div>
                             <button class="nav-button" onclick="nextImage('${galleryId}')">→</button>
                         </div>
-                        <a href="https://ejemplo.com/otra-pagina" class="redirect-button">Ver más fotos</a>
+                        <a href="https://ejemplo.com/otra-pagina" class="redirect-button">Descargar Pack</a>
                     </div>
                 `;
                 galleriesContainer.innerHTML += galleryHTML;
