--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
             {
                 name: "Grupo 1",
                 galleries: [
-                    { name: "Galería 1", images: ["https://ejemplo.com/foto1.jpg", "https://ejemplo.com/foto2.jpg"] },
+                    { name: "En 4 patas", images: ["https://i.postimg.cc/Y9tG32pG/88-PxH-1.webp", "https://i.postimg.cc/9X8Rdjs0/88-PxH-2.webp"] },
                     { name: "Galería 2", images: ["https://ejemplo.com/foto3.jpg", "https://ejemplo.com/foto4.jpg"] },
                 ]
             },
