--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                 name: "Grupo 1",
                 galleries: [
                     { name: "En 4 patas", images: ["https://i.postimg.cc/Y9tG32pG/88-PxH-1.webp", "https://i.postimg.cc/9X8Rdjs0/88-PxH-2.webp"] },
-                    { name: "Galería 2", images: ["https://ejemplo.com/foto3.jpg", "https://ejemplo.com/foto4.jpg"] },
+                    { name: "Masturbandose", images: ["https://i.postimg.cc/J0fRpKb6/248-Px-H-01.webp", "https://i.postimg.cc/PrDXCsjB/248-Px-H-03.webp"] },
                 ]
             },
             {
