--- a/index.html
+++ b/index.html
@@ -192,14 +192,17 @@
         // Lista de grupos de galerías
         const galleryGroups = [
             {
-                name: "Grupo 1",
+                name: "1",
                 galleries: [
                     { name: "En 4 patas", images: ["https://i.postimg.cc/Y9tG32pG/88-PxH-1.webp", "https://i.postimg.cc/9X8Rdjs0/88-PxH-2.webp"] },
                     { name: "Masturbandose", images: ["https://i.postimg.cc/J0fRpKb6/248-Px-H-01.webp", "https://i.postimg.cc/PrDXCsjB/248-Px-H-03.webp"] },
+                    { name: "Galería 3", images: ["https://ejemplo.com/foto5.jpg", "https://ejemplo.com/foto6.jpg"] },
+                    { name: "Galería 3", images: ["https://ejemplo.com/foto5.jpg", "https://ejemplo.com/foto6.jpg"] },
+                    { name: "Galería 3", images: ["https://ejemplo.com/foto5.jpg", "https://ejemplo.com/foto6.jpg"] },
                 ]
             },
             {
-                name: "Grupo 2",
+                name: "2",
                 galleries: [
                     { name: "Galería 3", images: ["https://ejemplo.com/foto5.jpg", "https://ejemplo.com/foto6.jpg"] },
                     { name: "Galería 4", images: ["https://ejemplo.com/foto7.jpg", "https://ejemplo.com/foto8.jpg"] },
