--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                 galleries: [
                     { name: "En 4 patas", images: ["https://i.postimg.cc/Y9tG32pG/88-PxH-1.webp", "https://i.postimg.cc/9X8Rdjs0/88-PxH-2.webp"] },
                     { name: "Masturbandose", images: ["https://i.postimg.cc/J0fRpKb6/248-Px-H-01.webp", "https://i.postimg.cc/PrDXCsjB/248-Px-H-03.webp"] },
-                    { name: "Galería 3", images: ["https://ejemplo.com/foto5.jpg", "https://ejemplo.com/foto6.jpg"] },
+                    { name: "Galería 3", images: ["https://i.postimg.cc/nrDpszr9/185-Px-H-01.webp", "https://i.postimg.cc/fWG08SxF/185-Px-H-02.webp", "https://i.postimg.cc/Dy14Hf6z/185-Px-H-03.webp"] },
                     { name: "Galería 3", images: ["https://ejemplo.com/foto5.jpg", "https://ejemplo.com/foto6.jpg"] },
                     { name: "Galería 3", images: ["https://ejemplo.com/foto5.jpg", "https://ejemplo.com/foto6.jpg"] },
                 ]
