--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
             {
                 name: "2",
                 galleries: [
-                    { name: "Galería 3", images: ["https://ejemplo.com/foto5.jpg", "https://ejemplo.com/foto6.jpg"] },
+                    { name: "Putita gym rat", images: ["https://i.postimg.cc/qqqg1nwt/210-Px-H-01.webp", "https://i.postimg.cc/Mp2KQgCf/210-Px-H-02.webp", "https://i.postimg.cc/CKvRkmHy/210-Px-H-03.webp"] },
                     { name: "Galería 4", images: ["https://ejemplo.com/foto7.jpg", "https://ejemplo.com/foto8.jpg"] },
                 ]
             }
