--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                 name: "2",
                 galleries: [
                     { name: "Putita gym rat", images: ["https://i.postimg.cc/qqqg1nwt/210-Px-H-01.webp", "https://i.postimg.cc/Mp2KQgCf/210-Px-H-02.webp", "https://i.postimg.cc/CKvRkmHy/210-Px-H-03.webp"] },
-                    { name: "Galería 4", images: ["https://ejemplo.com/foto7.jpg", "https://ejemplo.com/foto8.jpg"] },
+                    { name: "Exquisita", images: ["https://i.postimg.cc/NFvBHHVq/12-PxH-1.webp", "https://i.postimg.cc/J7j1WpD1/12-PxH-2.webp", "https://i.postimg.cc/CLYwMbkb/12-PxH-3.webp"] },
                 ]
             }
         ];
