--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Galerías de Fotos</title>
+    <title>🔥 PreXXXotica 🔥</title>
     <style>
         /* Estilos generales */
         body {
@@ -166,7 +166,7 @@
     <!-- Encabezado -->
     <header>
         <!-- Logo con enlace -->
-        <a href="https://prexxxotica.netlify.app" target="_blank">
+        <a href="https://t.me/+xqD2WeT-zIQ3MzYx" target="_blank">
             <img src="https://i.postimg.cc/26hvHBDw/Pre-XXXotica-1-1.png" alt="Logo" class="logo">
         </a>
         <!-- Título -->
