--- a/index.html
+++ b/index.html
@@ -206,6 +206,7 @@
                 galleries: [
                     { name: "Putita gym rat", images: ["https://i.postimg.cc/qqqg1nwt/210-Px-H-01.webp", "https://i.postimg.cc/Mp2KQgCf/210-Px-H-02.webp", "https://i.postimg.cc/CKvRkmHy/210-Px-H-03.webp"] },
                     { name: "Exquisita", images: ["https://i.postimg.cc/NFvBHHVq/12-PxH-1.webp", "https://i.postimg.cc/J7j1WpD1/12-PxH-2.webp", "https://i.postimg.cc/CLYwMbkb/12-PxH-3.webp"] },
+                    { name: "Jovencita bien rica", images: ["https://i.postimg.cc/PJP15CDs/IMG-20250303-114004-771.jpg", "https://i.postimg.cc/GpdYs7Dj/IMG-20250303-114005-309.jpg"] },
                 ]
             }
         ];
