--- a/index.html
+++ b/index.html
@@ -215,8 +215,8 @@
             {
                 name: "3",
                 galleries: [
-                    { name: "Pinshe putita", images: ["https://i.postimg.cc/W1wjJzmx/172-Px-H-01.webp"] },
-                    { name: "Pinshe putita", images: ["https://i.postimg.cc/W1wjJzmx/172-Px-H-01.webp"] },
+                    { name: "Cojiendo a mi prima", images: ["https://i.postimg.cc/XqC5BMpJ/260-Px-H-01.webp", "https://i.postimg.cc/yNLFmFBS/260-Px-H-02.webp", "https://i.postimg.cc/sfQpWQLv/260-Px-H-03.webp"] },
+                    { name: "Nena de lentes", images: ["https://i.postimg.cc/RVwKsr4m/266-Px-H-01.webp", "https://i.postimg.cc/JzmJSTzk/266-Px-H-02.webp", "https://i.postimg.cc/W3Qq88yt/266-Px-H-03.webp"] },
                 ]
             }
         ];
