--- a/index.html
+++ b/index.html
@@ -217,6 +217,9 @@
                 galleries: [
                     { name: "Cojiendo a mi prima", images: ["https://i.postimg.cc/XqC5BMpJ/260-Px-H-01.webp", "https://i.postimg.cc/yNLFmFBS/260-Px-H-02.webp", "https://i.postimg.cc/sfQpWQLv/260-Px-H-03.webp"] },
                     { name: "Nena de lentes", images: ["https://i.postimg.cc/RVwKsr4m/266-Px-H-01.webp", "https://i.postimg.cc/JzmJSTzk/266-Px-H-02.webp", "https://i.postimg.cc/W3Qq88yt/266-Px-H-03.webp"] },
+                    { name: "Pendeja cojiendo rico", images: ["https://i.postimg.cc/j5k4byFr/267-Px-H-01.webp", "https://i.postimg.cc/2jbK55Fx/267-Px-H-02.webp", "https://i.postimg.cc/fRZ25f4H/267-Px-H-03.webp"] },
+                    { name: "Moviéndose bien", images: ["https://i.postimg.cc/yYCvYyNV/268-Px-H-01.webp", "https://i.postimg.cc/y8vPjqyd/268-Px-H-02.webp", "https://i.postimg.cc/3N5CN3YL/268-Px-H-03.webp"] },
+                    { name: "Jovencita filtrada", images: ["https://i.postimg.cc/yd9cw2c0/262-Px-H-01.webp", "https://i.postimg.cc/XqkFvF2J/262-Px-H-02.webp", "https://i.postimg.cc/QNQcSGX3/262-Px-H-03.webp"] },
                 ]
             }
         ];
