--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
                             </div>
                             <button class="nav-button" onclick="nextImage('${galleryId}')">→</button>
                         </div>
-                        <a href="https://cuty.io/xbbDj1H" class="redirect-button">Descargar Pack</a>
+                        <a href="https://www.effectiveratecpm.com/q6yxskx5?key=fd35bb902306abfd2013a7eff03d5343" class="redirect-button">Descargar Pack</a>
                     </div>
                 `;
                 galleriesContainer.innerHTML += galleryHTML;
