--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
             {
                 name: "4",
                 galleries: [
-                    { name: "Pinshe putita", images: ["https://i.postimg.cc/W1wjJzmx/172-Px-H-01.webp"] },
+                    { name: "Primer video XXX", images: ["https://i.postimg.cc/kgqbw8Ks/273-Px-H-01.webp", "https://i.postimg.cc/9QbqkMBh/273-Px-H-02.webp", "https://i.postimg.cc/rppt2kht/273-Px-H-03.webp"] },
                 ]
             }
         ];
