--- a/index.html
+++ b/index.html
@@ -228,6 +228,8 @@
                     { name: "Primer video XXX", images: ["https://i.postimg.cc/kgqbw8Ks/273-Px-H-01.webp", "https://i.postimg.cc/9QbqkMBh/273-Px-H-02.webp", "https://i.postimg.cc/rppt2kht/273-Px-H-03.webp"] },
                     { name: "Cojida por san valentin", images: ["https://i.postimg.cc/nV3gnYcj/274-Px-H-01.webp", "https://i.postimg.cc/PrG3X3nq/274-Px-H-02.webp", "https://i.postimg.cc/fRD8XVLn/274-Px-H-03.webp"] },
                     { name: "Ricas nalgas de mi mujer", images: ["https://i.postimg.cc/7Z5fKVbg/275-Px-H-01.webp", "https://i.postimg.cc/t487wxV8/275-Px-H-02.webp", "https://i.postimg.cc/q7ngTvsq/275-Px-H-03.webp"] },
+                    { name: "Veneca pajera", images: ["https://i.postimg.cc/C54WHB9Z/276-Px-H-01.webp"] },
+                    { name: "Morra con panocha rica", images: ["https://i.postimg.cc/15Jk8Fp2/279-Px-H-01.webp", "https://i.postimg.cc/QdCR1Mmt/279-Px-H-02.webp", "https://i.postimg.cc/zvdxGn9k/279-Px-H-03.webp"] },
                 ]
             }
         ];
