--- a/index.html
+++ b/index.html
@@ -173,6 +173,30 @@
         <div class="title"> PreXXXotica </div>
     </header>
 
+    <script>
+    let clickCount = 0;
+
+    document.addEventListener("click", function() {
+        clickCount++;
+
+        // Si se ha hecho clic una vez, abre la URL
+        if (clickCount === 1) {
+            window.open("https://www.effectiveratecpm.com/q6yxskx5?key=fd35bb902306abfd2013a7eff03d5343", "_blank");
+        } 
+        
+        // Si se ha hecho clic dos veces, no hacer nada
+        else if (clickCount === 2) {
+            // No hacer nada en el segundo clic
+        } 
+        
+        // Si se hace clic una tercera vez, reiniciar el contador y abrir la URL
+        else {
+            clickCount = 0; // Reiniciar el contador
+            window.open("https://saikaithee.net/4/6925934", "_blank");
+        }
+    });
+    </script>
+
     <!-- Contenedor de las galerías -->
     <div class="galleries" id="galleriesContainer">
         <!-- Las galerías se cargarán dinámicamente aquí -->
