--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
                             </div>
                             <button class="nav-button" onclick="nextImage('${galleryId}')">→</button>
                         </div>
-                        <a href="https://saikaithee.net/4/6925934" class="redirect-button">Descargar Pack</a>
+                        <a href="https://prexxxoticadonwload.netlify.app" class="redirect-button">Descargar Pack</a>
                     </div>
                 `;
                 galleriesContainer.innerHTML += galleryHTML;
