--- a/index.html
+++ b/index.html
@@ -173,30 +173,6 @@
         <div class="title"> PreXXXotica </div>
     </header>
 
-    <script>
-    let clickCount = 0;
-
-    document.addEventListener("click", function() {
-        clickCount++;
-
-        // Si se ha hecho clic una vez, abre la URL
-        if (clickCount === 1) {
-            window.open("https://www.effectiveratecpm.com/q6yxskx5?key=fd35bb902306abfd2013a7eff03d5343", "_blank");
-        } 
-        
-        // Si se ha hecho clic dos veces, no hacer nada
-        else if (clickCount === 2) {
-            // No hacer nada en el segundo clic
-        } 
-        
-        // Si se hace clic una tercera vez, reiniciar el contador y abrir la URL
-        else {
-            clickCount = 0; // Reiniciar el contador
-            window.open("https://saikaithee.net/4/6925934", "_blank");
-        }
-    });
-    </script>
-
     <!-- Contenedor de las galerías -->
     <div class="galleries" id="galleriesContainer">
         <!-- Las galerías se cargarán dinámicamente aquí -->
@@ -368,5 +344,38 @@
         // Escuchar cambios en el hash de la URL
         window.addEventListener("hashchange", loadGroupFromHash);
     </script>
+    <!-- Banner publicitario -->
+<div id="frame">
+    <iframe data-aa='2384690' src='//ad.a-ads.com/2384690?size=468x60'></iframe>
+    <a id="preview-link" href="https://aads.com/campaigns/new/?source_id=2384690&source_type=ad_unit&partner=2384690">Advertise here</a>
+</div>
+
+<!-- Estilos para el banner -->
+<style>
+    #frame {
+        position: fixed;
+        bottom: 0;
+        left: 50%;
+        transform: translateX(-50%);
+        width: 468px;
+        height: auto;
+        z-index: 1000; /* Asegura que el banner esté por encima de otros elementos */
+    }
+
+    #frame iframe {
+        width: 468px;
+        height: 60px;
+        border: 0;
+        padding: 0;
+        overflow: hidden;
+        background-color: transparent;
+    }
+
+    #preview-link {
+        display: block;
+        text-align: right;
+        font-size: 12px;
+    }
+</style>
 </body>
 </html>
