--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
                   ]
             },
             {
-                name"7",
+                name: "7",
                 galleries: [
                     { name: "Al aire libre ", images: ["https://i.postimg.cc/Y2VBX8Kz/322-Px-H-01.webp", "https://i.postimg.cc/Vk9yk8SK/322-Px-H-03.webp"] },
                     { name: "Se graba ", images: ["https://i.postimg.cc/BvNd2BBD/323-Px-H-01.webp", "https://i.postimg.cc/LXXGDgxW/323-Px-H-02.webp", "https://i.postimg.cc/Ssv3vQ5x/323-Px-H-03.webp"] },
