--- a/index.html
+++ b/index.html
@@ -261,6 +261,16 @@
                     { name: "Sus mejores fotos", images: ["https://i.postimg.cc/T3Q6cxRp/325-Px-H-01.jpg"] },
                     { name: "Para su amigo", images: ["https://i.postimg.cc/2jvNKhkp/326-Px-H-01.webp", "https://i.postimg.cc/RVL5MmJX/326-Px-H-02.webp", "https://i.postimg.cc/JzpfkQqX/326-Px-H-03.webp"] },
                   ]
+            },
+            {
+                name: "8",
+                galleries: [
+                    { name: "Colección caliente", images: ["https://i.postimg.cc/sXHPPvLw/327-Px-H-01.webp", "https://i.postimg.cc/QCBQfjGs/327-Px-H-02.webp", "https://i.postimg.cc/7PcMfJ0L/327-Px-H-03.webp"] },
+                    { name: "Colección prex 🔞", images: ["https://i.postimg.cc/02DWv0Fv/328-Px-H-01.webp", "https://i.postimg.cc/HxFzDrtj/328-Px-H-02.webp", "https://i.postimg.cc/Y0g3ptXR/328-Px-H-03.webp"] },
+                    { name: "Joven caliente 🔥", images: ["https://i.postimg.cc/X7f8m7B7/329-Px-H-01.jpg"] },
+                    { name: "Primas en un live 😈🔥", images: ["https://i.postimg.cc/yxqmpwVZ/314-Px-H-01.webp", "https://i.postimg.cc/brQQ73JF/314-Px-H-02.webp", "https://i.postimg.cc/ZY3FvKcF/314-Px-H-03.webp"] },
+                    { name: "Flaca de buen culo", images: ["https://i.postimg.cc/pL0DM9Wx/243-Px-H-01.webp", "https://i.postimg.cc/zfVTzJvh/243-Px-H-02.webp", "https://i.postimg.cc/nLgBM69P/243-Px-H-03.webp"] },
+                  ]
             }
         ];
 
