--- a/index.html
+++ b/index.html
@@ -275,10 +275,10 @@
             {
                 name: "9",
                 galleries: [
-                    { name: "Le rompen su culito y la dejan temblando", images: ["https://i.postimg.cc/LX5sgMFG/Packs-1.jpg", "", ""] },
-                    { name: "La carita de la novia de mi amigo", images: ["https://i.postimg.cc/C18xssd4/IMG-20250309-153542-064.jpg", "", ""] },
-                    { name: "Mi mejor amiga cojiendo cin su vato", images: ["https://i.postimg.cc/x1NhCxZg/IMG-20250309-153847-973.jpg", "", ""] },
-                    { name: "A esta putita le gusta chuparla y montarla", images: ["https://i.postimg.cc/0yGGc7KP/IMG-20250309-154113-992.jpg", "", ""] },
+                    { name: "Le rompen su culito y la dejan temblando", images: ["https://i.postimg.cc/LX5sgMFG/Packs-1.jpg"] },
+                    { name: "La carita de la novia de mi amigo", images: ["https://i.postimg.cc/C18xssd4/IMG-20250309-153542-064.jpg"] },
+                    { name: "Mi mejor amiga cojiendo cin su vato", images: ["https://i.postimg.cc/x1NhCxZg/IMG-20250309-153847-973.jpg"] },
+                    { name: "A esta putita le gusta chuparla y montarla", images: ["https://i.postimg.cc/0yGGc7KP/IMG-20250309-154113-992.jpg"] },
                   ]
             }
         ];
