--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
                             </div>
                             <button class="nav-button" onclick="nextImage('${galleryId}')">→</button>
                         </div>
-                        <a href="https://prexcmplink.netlify.app" class="redirect-button">Descargar Pack</a>
+                        <a href="https://giphootchebs.net/4/9049442" class="redirect-button">Descargar Pack</a>
                     </div>
                 `;
                 galleriesContainer.innerHTML += galleryHTML;
