--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
                             </div>
                             <button class="nav-button" onclick="nextImage('${galleryId}')">→</button>
                         </div>
-                        <a href="https://prexcmplink.netlify.app" class="redirect-button">Descargar Pack</a>
+                        <a href="https://ptounood.top/4/6925934" class="redirect-button">Descargar Pack</a>
                     </div>
                 `;
                 galleriesContainer.innerHTML += galleryHTML;
